[package]
name = "display-interface"
description = "Traits for interfaces used to drive displays"
version = "0.4.1"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
repository = "https://github.com/therealprof/display-interface"
documentation = "https://docs.rs/display-interface"
categories = ["no-std"]
keywords = ["graphics", "display", "embedded"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".gitignore",
]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[workspace]

members = [
    ".",
    "i2c",
    "parallel-gpio",
    "spi",
]

[patch.crates-io]
display-interface = { version = "0.4", path = "." }

