[package]
name = "display-interface"
description = "Traits for interfaces used to drive displays"
version = "0.5.0"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
repository = "https://github.com/therealprof/display-interface"
documentation = "https://docs.rs/display-interface"
categories = ["no-std"]
keywords = ["graphics", "display", "embedded"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
    ".gitignore",
]
edition = "2021"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true

[dependencies]
defmt = { version = "0.3", optional = true }

[workspace]
members = [
    ".",
    "i2c",
    "parallel-gpio",
    "spi",
]

[features]
default = []
defmt-03 = ["dep:defmt"]
