[package]
name = "display-interface-traits"
description = "Traits for interfaces used to drive displays"
version = "0.1.0"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
repository = "https://github.com/therealprof/display-interface-traits"
documentation = "https://docs.rs/embedded-graphics"
categories = ["no-std"]
keywords = ["graphics", "display", "embedded"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".gitignore",
]
edition = "2018"

[package.metadata.docs.rs]
all-features = true
