[package]
name = "display-interface-i2c"
description = "Generic I2C implementation for display interfaces"
version = "0.4.0"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
repository = "https://github.com/therealprof/display-interface"
documentation = "https://docs.rs/display-interface-i2c"
categories = ["no-std"]
keywords = ["graphics", "display", "embedded"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".gitignore",
]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait = { version = "0.1.68", optional = true }
embedded-hal = "1.0.0-alpha.10"
embedded-hal-async = { version = "0.2.0-alpha.1", optional = true }
display-interface = { version = "0.4.1", path = ".." }

[features]
default = []
async = ["async-trait", "embedded-hal-async", "display-interface/async"]
nightly = ["display-interface/nightly"]
