[package]
name = "display-interface-i2c"
description = "Generic I2C implementation for display interfaces"
version = "0.5.0"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
repository = "https://github.com/therealprof/display-interface"
documentation = "https://docs.rs/display-interface-i2c"
categories = ["no-std"]
keywords = ["graphics", "display", "embedded"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [".gitignore"]
edition = "2021"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
display-interface = { version = "0.5.0", path = ".." }
maybe-async-cfg = "0.2.3"

[features]
default = []
async = ["embedded-hal-async"]