[package]
name = "display-interface-parallel-gpio"
description = "Generic parallel GPIO interface for display interfaces"
version = "0.5.0"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
repository = "https://github.com/therealprof/display-interface"
documentation = "https://docs.rs/display-interface-parallel-gpio"
categories = ["no-std"]
keywords = ["graphics", "display", "embedded"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".gitignore",
]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
embedded-hal = "0.2.3"
display-interface = "0.4"
byte-slice-cast = { version = "0.3.5", default-features = false }

