[package]
name = "display-interface-spi"
description = "Generic SPI implementation for display interfaces"
version = "0.5.0-alpha.1"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
repository = "https://github.com/therealprof/display-interface"
documentation = "https://docs.rs/display-interface-spi"
categories = ["no-std"]
keywords = ["graphics", "display", "embedded"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [".gitignore"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait = { version = "0.1.68", optional = true }
embedded-hal = "1.0.0-rc.1"
embedded-hal-async = { version = "1.0.0-rc.1", optional = true }
display-interface = { version = "0.5.0-alpha.1", path = ".." }
byte-slice-cast = { version = "1.2.2", default-features = false }

[features]
default = []
async = ["async-trait", "embedded-hal-async", "display-interface/async"]
nightly = ["display-interface/nightly"]
