[package]
name = "display-interface-spi"
description = "Generic SPI implementation for display interfaces"
version = "0.5.0"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
repository = "https://github.com/therealprof/display-interface"
documentation = "https://docs.rs/display-interface-spi"
categories = ["no-std"]
keywords = ["graphics", "display", "embedded"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [".gitignore"]
edition = "2021"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
display-interface = { version = "0.5.0", path = ".." }
byte-slice-cast = { version = "1.2.2", default-features = false }
